data/all_generated_tests/raw_wast_tests/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_102.wast
;; 3. **Branch Instructions Targeting Imported Function Return Point**    - Within a `block`, employ branch instructions (`br`, `br_if`) targeting the return point from an imported function call and validate the continuation of stack states.    - This tests ensuring that branching correctly forwards execution and stack state upon return from external function calls, revealing improper label indexing or stack manipulation.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func (result i32)))
    (func $test
      (block (result i32)
        (call $external_func)
        (br 0)
        (i32.const 0)
      )
      (i32.const 1)
    )
  )
  "type mismatch"
)